--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,5 @@
-h1= title
 form(action='/add', method='post')
-        input(type='text', name='url')
+        input(type='text', name='url', class='span8')
         input(type='submit')
 
 div
