Add error handling.

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,6 @@
 form(action='/add', method='post')
         input(type='text', name='url', class='span8')
         input(type='submit')
-
+div#msg
 div
         table#list.table.table-bordered
