--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,37 +9,42 @@ html
     script(type='text/javascript')
        var socket = io.connect();
        socket.on('reload', function(data){
-        data=eval('('+data+')');
-            $('#list').empty().append('<tr><th>名前</th><th>進捗状況</th><th>残り時間</th><th>下り速度</th><th>上り速度</th>');
-        console.log(data);
-        
-         for(var url in data){
-           $('#list').append('<tr><td>'
-                             + data[url].name
-                             +'</td><td><div style="margin-bottom: 0px;" class="progress progress-striped active"><div class="bar" style="width: '
-                             + data[url].percent
-                             + '%;">'
-                             + data[url].percent
-                             + '%</div></div></td><td>'
-                             + data[url].timeleft
-                             + '</td>'
-                             + '<td>'
-                             + data[url].downrate
-                             + '</td>'
-                             + '<td>'
-                             + data[url].uprate
-                             + '</td>'
-                             + '</tr>');
-        }
+       data=eval('('+data+')')
+       $('#list').empty().append('<tr><th>名前</th><th>進捗状況</th><th>残り時間</th><th>下り速度</th><th>上り速度</th>');
+       console.log(data);
+
+       for(var url in data){
+         $('#list').append('<tr><td>'
+           + data[url].name
+           +'</td><td><div style="margin-bottom: 0px;" class="progress progress-striped"><div class="bar" style="width: '
+           + data[url].percent
+           + '%;" >'
+           + data[url].percent
+           + '%</div></div></td><td>'
+           + data[url].timeleft
+           + '</td>'
+           + '<td>'
+           + data[url].downrate
+           + '</td>'
+           + '<td>'
+           + data[url].uprate
+           + '</td>'
+           + '</tr>');
+         }
+
+         socket.on('error', function(data){
+                data=eval('('+data+')');
+                $("#msg").append(data.message).alert();
+         });
        });
 
 
     body 
-        div.navbar.navbar-fixed-top
-            div.navbar-inner
-                div.container 
-                    a(href='/').brand #{title}
-                             
+      div.navbar.navbar-fixed-top
+        div.navbar-inner
+          div.container 
+            a(href='/').brand node-bittornado
+
     div.container!= body 
-        footer 
-            p &copy; small_field 
+      footer 
+        p &copy; small_field 
