--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,10 +10,13 @@ html
        var socket = io.connect();
        socket.on('reload', function(data){
        data=eval('('+data+')')
-       $('#list').empty().append('<tr><th>名前</th><th>進捗状況</th><th>残り時間</th><th>下り速度</th><th>上り速度</th>');
+       $('#list').empty().append('<tr><th>名前</th><th>進捗状況</th><th>残り時間</th><th>下り速度</th><th>上り速度</th><th />');
        console.log(data);
 
        for(var url in data){
+         del = $('<a class="btn" href="#"><i class="icon-remove"></i></a>').click(function(){
+                $.get("del", { key: url});
+         });
          $('#list').append('<tr><td>'
            + data[url].name
            +'</td><td><div style="margin-bottom: 0px;" class="progress progress-striped"><div class="bar" style="width: '
@@ -29,7 +32,11 @@ html
            + '<td>'
            + data[url].uprate
            + '</td>'
+           + '<td id="del_'
+           + url
+           + '"></td>'
            + '</tr>');
+           $("#del_" + url ).append(del);
          }
 
          socket.on('error', function(data){
@@ -37,7 +44,6 @@ html
                 $("#msg").append(data.message).alert();
          });
        });
-
 
     body 
       div.navbar.navbar-fixed-top
